--- a/platform_code/assessment/static/css/summary.css
+++ b/platform_code/assessment/static/css/summary.css
@@ -28,7 +28,7 @@ h1{
     width: 95%;
     text-align: center;
     margin: 0 auto;
-    color: #5550FF;
+    /* color: #5550FF; */
 }
 
 .modal-dialog{
