--- a/platform_code/assessment/templates/assessment/base-card-section.html
+++ b/platform_code/assessment/templates/assessment/base-card-section.html
@@ -46,7 +46,7 @@
             {{section.master_section.description|markdownify}}
             {% endif %}
         </p>
-        <a class="btn btn-primary card-button-section"
+        <a class="btn btn-secondary card-button-section"
            href="{{ section.get_absolute_url }}">{% trans "Go to the section" %}</a>
     </div>
 </article>
