--- a/platform_code/assessment/templates/assessment/creation-evaluation.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation.html
@@ -26,7 +26,7 @@
 
             </div>
 
-            <input class="btn btn-primary same-size-250 margin-auto" type="submit"
+            <input class="btn btn-secondary same-size-250 margin-auto" type="submit"
                    value="{% trans 'Create the evaluation' %}"/>
 
         </form>
