--- a/platform_code/assessment/templates/assessment/edit-evaluation.html
+++ b/platform_code/assessment/templates/assessment/edit-evaluation.html
@@ -24,9 +24,9 @@
             </div>
         </div>
         <div class="modal-footer">
-            <input class="btn btn-primary same-size-220 margin-auto" data-dismiss="modal" type="button"
+            <input class="btn btn-secondary same-size-220 margin-auto" data-dismiss="modal" type="button"
                    value="{% trans 'Cancel' %}"/>
-            <button class="btn btn-modify same-size-220 margin-auto"
+            <button class="btn btn-primary same-size-220 margin-auto"
                     type="button"
                     onclick="changeNameEvaluation('changeNameEval{{evaluation.id}}', '{{evaluation.id}}')"
             >{% trans "Change" %}
