--- a/platform_code/assessment/templates/assessment/labelling/create-labelling-modal.html
+++ b/platform_code/assessment/templates/assessment/labelling/create-labelling-modal.html
@@ -19,7 +19,7 @@
 <div class="modal-footer self-center">
         <form action="{% url 'assessment:labelling' evaluation.organisation.id evaluation.slug evaluation.id %}"
               id="labelling_form{{evaluation.id}}" method="get" class="margin-auto">
-            <button class="btn btn-primary upgrade-button-width margin-auto"
+            <button class="btn btn-secondary upgrade-button-width margin-auto"
                     type="submit"
             >{% trans 'Confirm' %}
             </button>
