--- a/platform_code/assessment/templates/assessment/organisation/member/add-member-modal.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/add-member-modal.html
@@ -54,7 +54,7 @@
         <div class="modal-footer center one-column">
             <div class="column">
                 <div>
-                    <button class="btn btn-primary adapted-button-size-250 margin-auto" id="sendInvitationButton"
+                    <button class="btn btn-secondary adapted-button-size-250 margin-auto" id="sendInvitationButton"
                             onclick="sendInvitation('send_invitation_form')"
                             type="button">{% trans 'Send the invitation' %}
                     </button>
