--- a/platform_code/assessment/templates/assessment/section-answers/element-feedback.html
+++ b/platform_code/assessment/templates/assessment/section-answers/element-feedback.html
@@ -33,7 +33,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary same-size-250 margin-auto"
+                    <button class="btn btn-secondary same-size-250 margin-auto"
                             name="button_feedback"
                             onclick="feedback(this, {{element.id}}, 'element')"
                             type="button">{% trans 'Submit' %}
