--- a/platform_code/assessment/templates/assessment/section.html
+++ b/platform_code/assessment/templates/assessment/section.html
@@ -41,7 +41,7 @@
     </div>
     <div class="tablet-max-center">
         <form action="{{ evaluation.get_absolute_url }}">
-            <input class="btn btn-primary float-left-larger-small-screen same-size-250"
+            <input class="btn btn-secondary float-left-larger-small-screen same-size-250"
                    type="submit"
                    value="{% trans 'Back to the sections page' %}"/>
         </form>
