--- a/platform_code/home/templates/home/creation-evaluation-mutli-orga-modal.html
+++ b/platform_code/home/templates/home/creation-evaluation-mutli-orga-modal.html
@@ -24,7 +24,7 @@
         <div class="modal-footer center one-column">
             <div class="column">
                 <div>
-                    <input class="btn btn-primary same-size-250 margin-auto" type="submit"
+                    <input class="btn btn-secondary same-size-250 margin-auto" type="submit"
                            value="{% trans 'Create a new evaluation' %}"/>
                 </div>
                 <div class="margin-10">
