--- a/platform_code/home/templates/home/dashboard/dashboard-admin-organisations-tab.html
+++ b/platform_code/home/templates/home/dashboard/dashboard-admin-organisations-tab.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="margin-20">
                         <input onclick='filterDashboardGraphs("organisations-filter-form")' value="{% trans 'Filter' %}"
-                               type="button" name="btn-orgs-form" class="btn btn-primary same-size-250 margin-auto">
+                               type="button" name="btn-orgs-form" class="btn btn-secondary same-size-250 margin-auto">
                     </div>
             </form>
         </div>
