--- a/platform_code/home/templates/home/dashboard/dashboard-admin-users-tab.html
+++ b/platform_code/home/templates/home/dashboard/dashboard-admin-users-tab.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="margin-20">
                         <input onclick='filterDashboardGraphs("users-filter-form")' value="{% trans 'Filter' %}"
-                        type="button" name="btn-users-form" class="btn btn-primary same-size-250 ">
+                        type="button" name="btn-users-form" class="btn btn-secondary same-size-250 ">
                     </div>
             </form>
         </div>
