--- a/platform_code/home/templates/home/homepage.html
+++ b/platform_code/home/templates/home/homepage.html
@@ -33,7 +33,7 @@
   <row>
   {% if user.is_authenticated %}
     <div class="center margin-70">
-      <a class="btn btn-primary margin-auto" href="{% url 'home:user-profile' %}">
+      <a class="btn btn-secondary margin-auto" href="{% url 'home:user-profile' %}">
         {% trans "My dashboard" %}
       </a>
     </div>  
