--- a/platform_code/home/templates/home/login.html
+++ b/platform_code/home/templates/home/login.html
@@ -38,7 +38,7 @@
         <div class="column">
             <div>
                 <button 
-                    class="btn btn-primary adapted-button-size-250 margin-auto"
+                    class="btn btn-secondary adapted-button-size-250 margin-auto"
                     name="action"
                     value="login"
                     type="submit"
