--- a/platform_code/home/templates/home/logout-page.html
+++ b/platform_code/home/templates/home/logout-page.html
@@ -6,7 +6,7 @@
 
 
 <div>
-    <a class="btn btn-primary same-size-220 float-left margin-auto" href="{% url 'home:user-profile' %}"
+    <a class="btn btn-secondary same-size-220 float-left margin-auto" href="{% url 'home:user-profile' %}"
        >{% trans "Cancel" %}</a>
     <a class="btn btn-danger same-size-220 float-right margin-auto" data-dismiss="modal"
        href="{% url 'home:logout' %}">{% trans "Logout" %}</a>
