--- a/platform_code/home/templates/home/logout.html
+++ b/platform_code/home/templates/home/logout.html
@@ -8,7 +8,7 @@
 <div class="center">
 
     <p>{% trans "Logged out!" %}</p>
-    <a class="btn btn-primary" href="{% url 'home:homepage' %}">{% trans "Click here to login again." %}</a>
+    <a class="btn btn-secondary" href="{% url 'home:homepage' %}">{% trans "Click here to login again." %}</a>
 
 </div>
 
