--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -21,7 +21,7 @@
         <div class="modal-footer center one-column">
             <div class="column">
                 <div>
-                    <input class="btn btn-primary same-size-250 margin-auto" id="orga-creation"
+                    <input class="btn btn-secondary same-size-250 margin-auto" id="orga-creation"
                            type="submit" value="{% trans 'Create the organisation' %}"/>
                 </div>
                 <div class="margin-10">
