--- a/platform_code/home/templates/home/profile-organisation-creation.html
+++ b/platform_code/home/templates/home/profile-organisation-creation.html
@@ -33,7 +33,7 @@
                     <p class="red-color">{{ error }}</p>
                 {% endfor %}
             {% endfor %}
-            <button class="btn btn-primary button-190-or-220 margin-10" id="orga-creation" type="submit">{% trans "Create" %}
+            <button class="btn btn-secondary button-190-or-220 margin-10" id="orga-creation" type="submit">{% trans "Create" %}
             </button>
         </form>
 
