--- a/platform_code/home/templates/home/profile-settings.html
+++ b/platform_code/home/templates/home/profile-settings.html
@@ -72,7 +72,7 @@
 
 <!--<form action="{% url 'home:user-profile' %}"-->
 <!--      class="center-smartphone">-->
-<!--    <input class="btn btn-primary bottom-page-button float-right-larger-tablet same-size-280 " type="submit"-->
+<!--    <input class="btn btn-secondary bottom-page-button float-right-larger-tablet same-size-280 " type="submit"-->
 <!--           value="{% trans 'Go back to my dashboard' %}"/>-->
 <!--</form>-->
 
