--- a/platform_code/home/templates/home/registration/password_reset_complete.html
+++ b/platform_code/home/templates/home/registration/password_reset_complete.html
@@ -4,6 +4,6 @@
 {% block content %}
 <div class="container evaluation-title">
     <h3 class="title-pills">{% trans "The password has been changed!" %}</h3>
-    <p><a class="btn btn-primary" href="{% url 'home:homepage' %}">{% trans "Login" %}</a></p>
+    <p><a class="btn btn-secondary" href="{% url 'home:homepage' %}">{% trans "Login" %}</a></p>
 </div>
 {% endblock %}
