--- a/platform_code/home/templates/home/registration/password_reset_form.html
+++ b/platform_code/home/templates/home/registration/password_reset_form.html
@@ -19,7 +19,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <div class="margin-50">
-            <button class="btn btn-primary"
+            <button class="btn btn-secondary"
                     type="submit">{% trans "Reset" %}</button>
             <a class="btn btn-danger" href="{% url 'home:user-profile-settings' %}">{% trans "Cancel" %}</a>
         </div>
