--- a/platform_code/home/templates/home/settings-data.html
+++ b/platform_code/home/templates/home/settings-data.html
@@ -17,7 +17,7 @@
             </span>
             <p>{{ field }}</p>
             {% endfor %}
-            <button class="btn btn-primary float-left-larger-tablet"
+            <button class="btn btn-secondary float-left-larger-tablet"
                     onclick="submitUserSettingsDataForm('form-user-data')"
                     type="button">{% trans "Modify" %}
             </button>
