--- a/platform_code/home/templates/home/settings-delete.html
+++ b/platform_code/home/templates/home/settings-delete.html
@@ -10,7 +10,7 @@
     >{% trans "The organisations you are the only admin member will be deleted, as well as their evaluations." %}</p>
 
 <div class="center-smartphone">
-    <a class="btn btn-primary adapted-width-button float-left-larger-tablet"
+    <a class="btn btn-secondary adapted-width-button float-left-larger-tablet"
        href="{% url 'home:user-profile-settings' %}"
     >{% trans "Cancel"%}</a>
     <button class="btn btn-danger adapted-width-button float-right-larger-tablet smartphone-margin-top"
@@ -36,7 +36,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary same-size-250 margin-auto smartphone-60-height"
+                <button class="btn btn-secondary same-size-250 margin-auto smartphone-60-height"
                         data-dismiss="modal"
                         type="button">
                     {% trans "Cancel" %}
