--- a/platform_code/home/templates/home/signup.html
+++ b/platform_code/home/templates/home/signup.html
@@ -29,7 +29,7 @@
         </div>
     {% endfor %}
     <div class="center">
-        <button class="btn btn-primary margin-bot-top-20 adapted-button-size-250"
+        <button class="btn btn-secondary margin-bot-top-20 adapted-button-size-250"
                 name="action" value="signup"
                 type="submit">{% trans "Sign up" %}
         </button>
