--- a/platform_code/templates/errors.html
+++ b/platform_code/templates/errors.html
@@ -36,6 +36,6 @@
             <h1>{{title}}</h1>
             <p>{{content}}</p>
         </div>
-        <a class="btn btn-primary card-button" href="{% url 'home:homepage' %}">{% trans "Homepage" %}</a>
+        <a class="btn btn-secondary card-button" href="{% url 'home:homepage' %}">{% trans "Homepage" %}</a>
     </div>
 </body>
