--- a/platform_code/assessment/templates/assessment/duplicate-modal.html
+++ b/platform_code/assessment/templates/assessment/duplicate-modal.html
@@ -18,7 +18,7 @@
 <div class="modal-footer self-center">
         <form action="{% url 'assessment:duplicate' evaluation.organisation.id evaluation.slug evaluation.id %}"
               id="duplicate_form{{evaluation.id}}" method="get" class="margin-auto">
-            <button class="btn btn-primary upgrade-button-width margin-auto"
+            <button class="btn btn-secondary upgrade-button-width margin-auto"
                     onclick="duplicate(event, '{{evaluation.id}}', 'duplicate_form{{evaluation.id}}')"
                     type="submit"
             >{% trans 'Yes' %}
