--- a/platform_code/assessment/templates/assessment/labelling/validation-modal.html
+++ b/platform_code/assessment/templates/assessment/labelling/validation-modal.html
@@ -17,7 +17,7 @@
 <div class="modal-footer self-center">
         <form action="{% url 'assessment:end-labelling' labelling.evaluation.organisation.id labelling.evaluation.slug labelling.evaluation.id 'validation' %}"
             method="get" class="margin-auto">
-            <button class="btn btn-primary upgrade-button-width margin-auto"
+            <button class="btn btn-secondary upgrade-button-width margin-auto"
                     type="submit"
             >{% trans 'Yes' %}
             </button>
