--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="modal-footer self-center">
-            <button class="btn btn-primary adapted-button-size-250 margin-auto margin-10"
+            <button class="btn btn-secondary adapted-button-size-250 margin-auto margin-10"
                     onclick="editRoleMember('editRoleMember{{member.id}}', '{{member.id}}', false)"
                     type="button">
                 {% trans "Change" %}
