--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-pending-member.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="modal-footer self-center">
-            <button class="btn btn-primary adapted-button-size-250 margin-auto margin-10"
+            <button class="btn btn-secondary adapted-button-size-250 margin-auto margin-10"
                     onclick="editRoleMember('editRoleInvitation{{pending_member.id}}', '{{pending_member.id}}', true)"
                     type="button">
                 {% trans "Change" %}
