--- a/platform_code/assessment/templates/assessment/organisation/member/remove-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-pending-member.html
@@ -17,7 +17,7 @@
               method="post"
               class="tablet-max-center">
             {% csrf_token %}
-            <button class="btn btn-primary adapted-button-size-250 margin-auto"
+            <button class="btn btn-secondary adapted-button-size-250 margin-auto"
                     onclick="removeMember('remove_pending_member{{pending_member.id}}', '{{pending_member.id}}', true)"
                     type="button">
                 {% trans 'Yes' %}
