--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -139,16 +139,16 @@
     </div>
     <div class="results-buttons-grid">
         <form action="{% url 'assessment:orga-summary' organisation.id %}" class="float-left margin-auto">
-            <input class="btn btn-primary width-200" type="submit"
+            <input class="btn btn-secondary width-200" type="submit"
                    value="{% trans 'Back to organisation' %}"/>
         </form>
 
         {% if evaluation.is_editable %}
         <form action="{{ evaluation.get_absolute_url }}" class="margin-auto">
-            <input class="btn btn-primary width-200" type="submit" value="{% trans 'Modify' %}"/>
+            <input class="btn btn-secondary width-200" type="submit" value="{% trans 'Modify' %}"/>
         </form>
         {% else %}
-        <button class="btn btn-primary margin-auto width-200" disabled
+        <button class="btn btn-secondary margin-auto width-200" disabled
                 title="{% trans 'You cannot edit an evaluation with a labelling process' %}">{% trans "Modify" %}
         </button>
         {% endif %}
@@ -156,17 +156,17 @@
         {% if evaluation_score >= labelling_threshold %}
             {% if not evaluation.has_labelling %}
                 <form action="{{ evaluation.get_absolute_url }}labelling/" class="float-right margin-auto">
-                    <input class="btn btn-primary width-200" type="submit" value="{% trans 'Initiate labelling' %}"/>
+                    <input class="btn btn-secondary width-200" type="submit" value="{% trans 'Initiate labelling' %}"/>
                 </form>
             {% else %}
                 <form action="{% url 'home:user-profile' 'labelling' %}" class="margin-auto">
-                    <input class="btn btn-primary width-200" type="submit" value="{% trans 'See labelling' %}"/>
+                    <input class="btn btn-secondary width-200" type="submit" value="{% trans 'See labelling' %}"/>
                 </form>
             {% endif %}
         {% endif %}
 
         <form action="{{ evaluation.get_absolute_url }}results/pdf/" class="margin-auto">
-            <input class="btn btn-primary width-200" type="submit" value="{% trans 'Export PDF' %}"/>
+            <input class="btn btn-secondary width-200" type="submit" value="{% trans 'Export PDF' %}"/>
         </form>
     </div>
 </div>
@@ -239,7 +239,7 @@
         {% endfor %}
     </div>
     <div>
-        <button class="btn btn-primary float-right" id="top-button" onclick="topFunction()"
+        <button class="btn btn-secondary float-right" id="top-button" onclick="topFunction()"
                 title="{% trans 'Top of the page' %}">{% trans 'Top of the page' %}
         </button>
     </div>
