--- a/platform_code/assessment/templates/assessment/section-answers/section-feedback.html
+++ b/platform_code/assessment/templates/assessment/section-answers/section-feedback.html
@@ -29,7 +29,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary same-size-250 margin-auto"
+                    <button class="btn btn-secondary same-size-250 margin-auto"
                             name="button_feedback"
                             onclick="feedback(this, {{section.id}}, 'section')"
                             type="submit">{% trans 'Submit' %}
