--- a/platform_code/home/templates/home/profile-user-notes.html
+++ b/platform_code/home/templates/home/profile-user-notes.html
@@ -60,7 +60,7 @@
                                 </p>
                                 <div class="margin-auto profile-notes-buttons">
                                     <a href="{% url 'assessment:orga-summary' evaluation.organisation.id %}{{evaluation.name|slugify}}/{{evaluation.id}}/section/{{section.id}}/{{section.master_section.keyword|slugify}}/{{section.master_section.order_id}}?element={{element.master_evaluation_element.order_id}}">
-                                        <button class="btn btn-primary small-btn m-1"
+                                        <button class="btn btn-secondary small-btn m-1"
                                                 title="{% trans 'Go to the note' %}">
                                             <i class="fa fa-edit"></i>
                                         </button>
