--- a/platform_code/home/templates/home/registration/password_reset_confirm.html
+++ b/platform_code/home/templates/home/registration/password_reset_confirm.html
@@ -9,7 +9,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-primary" type="submit">{% trans "Change the password" %}</button>
+        <button class="btn btn-secondary" type="submit">{% trans "Change the password" %}</button>
     </form>
     {% else %}
     <p>
