--- a/platform_code/home/templates/home/settings-export-data.html
+++ b/platform_code/home/templates/home/settings-export-data.html
@@ -19,7 +19,7 @@
 </div>
 <div class="center-smartphone">
 <form action="{% url 'home:export-user-data' %}">
-    <input class="btn btn-primary float-left-larger-tablet"
+    <input class="btn btn-secondary float-left-larger-tablet"
            type="submit"
            value="{% trans 'Download' %}"/>
 </form>
