--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -26,7 +26,7 @@
             <p class="max-width">{{field}}</p>
             {% endfor %}
             <div class="center-smartphone">
-                <button class="btn btn-primary" onclick="submitUserSettingsPasswordForm('ChangePassword')"
+                <button class="btn btn-secondary" onclick="submitUserSettingsPasswordForm('ChangePassword')"
                         type="button">{% trans "Modify" %}
                 </button>
             </div>
